# playclist

./: CMakeLists.txt  README.md  main.c
include/: core.h  ncutil.h  playlist.h  song.h  type.h
src/: core.c  ncutil.c  playlist.c  song.c
